/*
Name: Ambient Ping Pong
ID: D3F95035-B1A9-C1DE-A6D3-54E421E8567C
original size : uint8_t preset_7[1544]
 */

// [START declaration]
syntax = "proto2";
package presets;
// [END declaration]

// [START messages]
// ======== data.json ========
message CParam {
    optional int32 id = 1;
    optional float value = 2;
}

message CSigPath {
    message CBlocks {
        message CItem {
            optional string id = 1;
            optional bool isActive = 2;
            optional string name = 3;
            repeated CParam params = 4;
            optional string selected = 5;
        }

        repeated CItem items = 1;
    }

    message CMetronome {
        optional int32 bpm = 1;
        optional bool isActive = 2;
    }

    message CNoisegate {
        optional string id = 1;
        optional bool isActive = 2;
        optional string name = 3;
        repeated CParam params = 4;
        optional string selected = 5;
    }

    optional CBlocks blocks = 1;
    optional CMetronome metronome = 2;
    optional CNoisegate noisegate = 3;
}

message CPresetDataJson {
    optional string panelStyle = 1;
    optional CSigPath sigPath = 2;
}
// ===========================

// ======== meta.json ========
message CPresetMetaJson {
    optional string category = 1;
    optional string description = 2;
    optional string displayName = 3;
    repeated int32 features = 4;
    optional string id = 5;
    optional string version = 6;
}
// ===========================

// ======== template.json ========
message CPresetTemplateJson {
    message CElements {
        message CItem {
            repeated string indexID = 1;
            optional string paramID = 2;
            optional string position = 3;
            optional string res = 4;
            optional string type = 5;
        }

        repeated CItem items = 1;
    }

    optional string Box = 1;
    optional string Control = 2;
    optional string Texture = 3;
    optional CElements elements = 4;
    optional string fontFamily = 5;
    optional string panelStyle = 6;
    optional int32 showsKnobs = 7;
    optional string templateId = 8;
}
// ===========================

message CPresetAllData {

    // Just include all data/meta/template json contents
    optional CPresetDataJson dataJson = 1;
    optional CPresetMetaJson metaJson = 2;
    optional CPresetTemplateJson templateJson = 3;
}
// [END messages]
